[gd_scene load_steps=22 format=3 uid="uid://luv2x7uq8c4t"]

[ext_resource type="Resource" uid="uid://dcfo1l7147jx0" path="res://combat/modes/Deathmatch.tres" id="1"]
[ext_resource type="Theme" uid="uid://dui8cebqku8x5" path="res://interface/themes/olympic_theme.tres" id="2"]
[ext_resource type="FontFile" uid="uid://cmvmqjwssraau" path="res://assets/fonts/Commando/commando.ttf" id="3"]
[ext_resource type="Animation" path="res://assets/animations/Blink.tres" id="5"]
[ext_resource type="PackedScene" uid="uid://cdvdd8hc6tcqq" path="res://godot4/ui/utils/Typewriter.tscn" id="6"]
[ext_resource type="AudioStream" uid="uid://cb1jj8arv43xu" path="res://assets/audio/UI_effects/thud.ogg" id="7"]
[ext_resource type="Script" uid="uid://df0d12p6af0u2" path="res://map_with_sets/DescriptionMode.gd" id="8"]
[ext_resource type="PackedScene" uid="uid://cy5pkamh8gihg" path="res://ui/common_elements/PlayersReady/PlayersReadyWheels.tscn" id="9"]
[ext_resource type="FontFile" uid="uid://dprehv4eo4p4u" path="res://assets/fonts/Pixel-Powerline-440555/Pixel Powerline.otf" id="10"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("3")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("3")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="FontFile" id="9"]
fallbacks = Array[Font]([ExtResource("3")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="FontFile" id="8"]
fallbacks = Array[Font]([ExtResource("3")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="FontFile" id="10"]
fallbacks = Array[Font]([ExtResource("3")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="FontFile" id="11"]
fallbacks = Array[Font]([ExtResource("3")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="Animation" id="3"]
length = 3.5
tracks/0/type = "animation"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Continue/AnimationPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": PackedStringArray("blink"),
"times": PackedFloat32Array(1)
}

[sub_resource type="Animation" id="4"]

[sub_resource type="Animation" id="5"]

[sub_resource type="Animation" id="6"]
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Continue:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="FontFile" id="7"]
fallbacks = Array[Font]([ExtResource("10")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="FontFile" id="12"]
fallbacks = Array[Font]([ExtResource("10")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[node name="DescriptionMode" type="Control"]
process_mode = 3
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -80.0
rotation = -0.00219995
theme = ExtResource("2")
script = ExtResource("8")
gamemode = ExtResource("1")

[node name="LabelShadow" type="Label" parent="."]
modulate = Color(0, 0, 0, 0.196078)
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.000457764
offset_top = -12.0
offset_right = 0.000488281
offset_bottom = -12.0
size_flags_horizontal = 3
theme_override_fonts/font = SubResource("1")
text = "MINIGAME"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
self_modulate = Color(1.12, 1.12, 1.12, 1)
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.000915527
offset_top = -24.0
offset_right = 0.000976562
offset_bottom = -24.0
size_flags_horizontal = 3
theme_override_colors/font_shadow_color = Color(0.247059, 0.247059, 0.247059, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 4
theme_override_fonts/font = SubResource("2")
text = "MINIGAME"
align = 1
valign = 1
uppercase = true

[node name="WinterShadow" type="Label" parent="."]
modulate = Color(0, 0, 0, 0.196078)
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.000915527
offset_top = -103.0
offset_right = 0.000976562
offset_bottom = -103.0
size_flags_horizontal = 3
theme_override_fonts/font = SubResource("9")
text = "WINTER"
align = 1
valign = 1
uppercase = true

[node name="Winter" type="Label" parent="."]
modulate = Color(0.615686, 0.921569, 1, 1)
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.00491333
offset_top = -115.0
offset_right = 0.00488281
offset_bottom = -115.0
size_flags_horizontal = 3
theme_override_colors/font_shadow_color = Color(0, 0.533333, 0.964706, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = SubResource("8")
text = "WINTER"
align = 1
valign = 1
uppercase = true

[node name="PerfectionistShadow" type="Label" parent="."]
modulate = Color(0, 0, 0, 0.196078)
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.00198364
offset_top = 65.0
offset_right = -0.00195312
offset_bottom = 65.0
size_flags_horizontal = 3
theme_override_colors/font_shadow_color = Color(0.670588, 0, 0.345098, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = SubResource("10")
text = "PERFECTIONIST"
align = 1
valign = 1
uppercase = true

[node name="Perfectionist" type="Label" parent="."]
modulate = Color(1, 0.25098, 0.831373, 1)
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.00167847
offset_top = 57.0
offset_right = -0.00170898
offset_bottom = 57.0
size_flags_horizontal = 3
theme_override_colors/font_shadow_color = Color(0.670588, 0, 0.345098, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = SubResource("11")
text = "PERFECTIONIST"
align = 1
valign = 1
uppercase = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "ready"
anims/describeme = SubResource("3")
anims/getin = SubResource("4")
anims/getout = SubResource("5")
anims/ready = SubResource("6")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7")
volume_db = 15.0
mix_target = 1
bus = "SFX"

[node name="Continue" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.002
offset_top = 343.522
offset_right = 639.998
offset_bottom = 393.522
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_fonts/font = SubResource("7")
text = "hold the BUTTON to continue"
align = 1
valign = 1
uppercase = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Continue"]
anims/blink = ExtResource("5")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="Description" parent="." instance=ExtResource("6")]
offset_top = 76.0
offset_bottom = 219.0
theme_override_colors/font_shadow_color = Color(0.2, 0.317647, 0.482353, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = SubResource("12")

[node name="LineLeft" type="Polygon2D" parent="."]
self_modulate = Color(1.12, 1.12, 1.12, 1)
position = Vector2(-61.8758, -11.4888)
polygon = PackedVector2Array(703, 288, 698, 309, -358, 309, -353, 288)

[node name="Shadow" type="Polygon2D" parent="LineLeft"]
show_behind_parent = true
position = Vector2(0, 7)
color = Color(0, 0, 0, 0.196078)
polygon = PackedVector2Array(703, 288, 698, 309, -358, 309, -353, 288)

[node name="Line2D" type="Line2D" parent="LineLeft"]
points = PackedVector2Array(0, 288, 703, 288, 698, 309, -358, 309, -353, 288, 0, 288)
width = 3.0
default_color = Color(0, 0, 0, 1)
joint_mode = 2

[node name="LineRight" type="Polygon2D" parent="."]
self_modulate = Color(1.12, 1.12, 1.12, 1)
position = Vector2(995.124, -11.489)
polygon = PackedVector2Array(703, 288, 698, 309, -358, 309, -353, 288)

[node name="Shadow" type="Polygon2D" parent="LineRight"]
show_behind_parent = true
position = Vector2(0, 7)
color = Color(0, 0, 0, 0.196078)
polygon = PackedVector2Array(703, 288, 698, 309, -358, 309, -353, 288)

[node name="Line2D" type="Line2D" parent="LineRight"]
points = PackedVector2Array(0, 288, 703, 288, 698, 309, -358, 309, -353, 288, 0, 288)
width = 3.0
default_color = Color(0, 0, 0, 1)
joint_mode = 2

[node name="PlayersReady" parent="." instance=ExtResource("9")]
offset_left = -0.00138228
offset_top = -134.0
offset_right = -0.00134277
offset_bottom = 26.0

[connection signal="done" from="Description" to="." method="_on_Description_done"]
